syntax = "proto3";
package racecarweb.pairingqueue.v1;

option go_package = "racecar-web/x/pairingqueue/types";

// PairingRequest defines the PairingRequest message.
message PairingRequest {
  string request_id = 1;
  string initiator_id = 2;
  string target_id = 3;
  string request_type = 4;
  string proxy_id = 5;
  string status = 6;
  int64 created_at = 7;
  int64 processed_at = 8;
  string request_data = 9;
  int32 retry_count = 10;
  int32 max_retries = 11;
  int64 last_attempt_at = 12;
  int64 next_retry_at = 13;
  string failure_reason = 14;
}
